--- a/index.html
+++ b/index.html
@@ -8,19 +8,25 @@
     <meta name="description" content="You are not the user. You are the used. Attention is the new control." />
     <meta name="author" content="The Unseen" />
 
+    <!-- 🧠 Attention Era OG meta -->
     <meta property="og:title" content="ATTENTION ERA" />
     <meta property="og:description" content="You are not the user. You are the used. Attention is the new control." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://attention-era.netlify.app/banner.png" />
 
+    <!-- 🐦 Twitter meta with clean handle -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@attention_era" />
+    <meta name="twitter:image" content="https://attention-era.netlify.app/banner.png" />
+
+    <!-- Optional: Favicon if you have one -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
 
-  <body>
+  <body class="bg-black text-white font-mono">
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
+
+    <!-- 📡 GPT Engine or future override scripts -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
